# qc-cmake

./: CMakeLists.txt  bundle-static-libraries.cmake  create-package-files.cmake  setup-general.cmake  setup-install.cmake  setup-target.cmake  utility.cmake  warnings.cmake
legacy/: setup-target.cmake
